###################################################################
#
# Round for C++
#
# Copyright (C) Satoshi Konno 2014
#
# This is licensed under BSD-style license, see file COPYING.
#
###################################################################

roundcc_headers = \
	./round/Client.h \
	./round/common/BitOption.h \
	./round/common/Clock.h \
	./round/common/Cloneable.h \
	./round/common/Config.h \
	./round/common/ConsistentHash.h \
	./round/common/Dictionary.h \
	./round/common/DomainSocket.h \
	./round/common/Error.h \
	./round/common/HashObject.h \
	./round/common/JSON.h \
	./round/common/Message.h \
	./round/common/Mutex.h \
	./round/common/Notification.h \
	./round/common/platform.h \
	./round/common/Properties.h \
	./round/common/Random.h \
	./round/common/RPC.h \
	./round/common/Semaphore.h \
	./round/common/Settings.h \
	./round/common/StringTokenizer.h \
	./round/common/Thread.h \
	./round/common/types.h \
	./round/common/Vector.h \
	./round/Const.h \
	./round/core/Alias.h \
	./round/core/ClientCore.h \
	./round/core/Cluster.h \
	./round/core/ErrorNo.h \
	./round/core/HTTP.h \
	./round/core/impl/HTTPUServer.h \
	./round/core/impl/UPnPNodeFinder.h \
	./round/core/impl/UPnPServerNode.h \
	./round/core/LocalNode.h \
	./round/core/Log.h \
	./round/core/Logger.h \
	./round/core/LoggerTarget.h \
	./round/core/Method.h \
	./round/core/Node.h \
	./round/core/NodeCore.h \
	./round/core/NodeFinder.h \
	./round/core/NodeGraph.h \
	./round/core/NodeMessage.h \
	./round/core/NodeStatus.h \
	./round/core/Registry.h \
	./round/core/RemoteNode.h \
	./round/core/Route.h \
	./round/core/RQL.h \
	./round/core/Script.h \
	./round/core/ServerNode.h \
	./round/core/Trigger.h \
	./round/Finder.h \
	./round/Round.h \
	./round/script/Java.h \
	./round/script/JavaScript.h \
	./round/script/Lua.h \
	./round/script/Tcl.h \
	./round/Server.h \
	./round/ui/Console.h

nobase_include_HEADERS = \
	$(roundcc_headers)
